--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Amazon</title>
+  <meta name="description" content="Review rating provides Validated user reviews to
+   help you make your buying Decision." />
+
+
+  <meta property="keyword" name="keyword" content="review prouct, best review, top,review,
+  amazon best review , amazon best product view, amazon best reviewed " />
+  <title>Review Stackasian</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
