--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap" rel="stylesheet">
 
 
-
+  <meta name="google-site-verification" content="wgryRWmkhTEmD6xemg6Wt7802BtQuP8yymTM07a08nM" />
 </head>
 <body class="mat-typography">
   <app-root></app-root>
