--- a/src/index.html
+++ b/src/index.html
@@ -31,8 +31,13 @@
 
   <meta name="google-site-verification" content="wgryRWmkhTEmD6xemg6Wt7802BtQuP8yymTM07a08nM" />
 </head>
+
+
+
+
 <body class="mat-typography">
-  <app-root></app-root>
+  <app-root>
+  </app-root>
   <noscript>Please enable JavaScript to continue using this application.</noscript>
 </body>
 </html>
