--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,12 @@
   <script async custom-element="amp-auto-ads"
   src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
 </script>
+
+<script>
+  (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+
+
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Cabin:wght@400;500;600;700&display=swap" rel="stylesheet">
