--- a/src/index.html
+++ b/src/index.html
@@ -29,9 +29,9 @@
   src="https://cdn.ampproject.org/v0/amp-auto-ads-0.1.js">
 </script>
 
-<script>
+<!-- <script>
   (adsbygoogle = window.adsbygoogle || []).push({});
-</script>
+</script> -->
 
 
   <link rel="preconnect" href="https://fonts.gstatic.com">
